Create and adaptive subscribe for, beggins get in touch

--- a/index.html
+++ b/index.html
@@ -257,11 +257,194 @@
                </div>
             </div>
          </section>
+         <section class="page__whoweare whoweare">
+            <div class="whoweare__container _container">
+               <div class="practice__header header__block">
+                  <h2 class="header__block__title">Who We Are</h2>
+                  <div class="header__block__text">Problems trying to resolve the conflict between the two major realms
+                     of Classical physics: Newtonian mechanics</div>
+               </div>
+               <div class="whoweare__body">
+                  <div class="whoweare__video">
+                     <iframe width="560" height="315" src="https://www.youtube.com/embed/4yjMKkUYMAU"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                  </div>
+                  <div class="whoweare__content">
+                     <h2 class="whoweare_title">Most trusted in our field</h2>
+                     <div class="whoweare__text">
+                        Most calendars are designed for teams. Slate is designed for freelancers who want a simple way
+                        to plan their schedule.
+                     </div>
+                     <div class="whoweare__items">
+                        <div class="whoweare__item item-whoweare">
+                           <div class="item__whoweare__icon">
+                              <img src="image/whoweare_img/People.svg" alt="People">
+                           </div>
+                           <div class="item-whoweare__content">
+                              <div class="item__whoweare__title">the quick fox jumps over the lazy dog</div>
+                              <div class="item__whoweare__text">Things on a very small scale ...</div>
+                           </div>
+                        </div>
+                        <div class="whoweare__item item-whoweare">
+                           <div class="item__whoweare__icon">
+                              <img src="image/whoweare_img/Vector.svg" alt="speedometer">
+                           </div>
+                           <div class="item-whoweare__content">
+                              <div class="item__whoweare__title">the quick fox jumps over the lazy dog</div>
+                              <div class="item__whoweare__text">Things on a very small scale ...</div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <div class="page__clients clients">
+            <div class="clients__container _container">
+               <div class="clients__list">
+                  <ul class="clients__items">
+                     <li class="clients__item">
+                        <a href="#" class="clients__link">
+                           <img src="image/client_img/hooli.png" alt="hooli">
+                        </a>
+                     </li>
+                     <li class="clients__item">
+                        <a href="#" class="clients__link">
+                           <img src="image/client_img/left.png" alt="Lyft">
+                        </a>
+                     </li>
+                     <li class="clients__item">
+                        <a href="#" class="clients__link">
+                           <img src="image/client_img/listok.png" alt="Listok">
+                        </a>
+                     </li>
+                     <li class="clients__item">
+                        <a href="#" class="clients__link">
+                           <img src="image/client_img/aws.png" alt="AWS">
+                        </a>
+                     </li>
+                     <li class="clients__item">
+                        <a href="#" class="clients__link">
+                           <img src="image/client_img/stripe.png" alt="Stripe">
+                        </a>
+                     </li>
+                     <li class="clients__item">
+                        <a href="#" class="clients__link">
+                           <img src="image/client_img/reddit.png" alt="Reddit">
+                        </a>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+         <section class="page__subscribe subscribe">
+            <div class="subscribe__container _container">
+               <div class="subscribe__body">
+                  <h4 class="subscribe__title">Subscribe For Latest Newsletter</h4>
+                  <form action="#" class="subscribe__form">
+                     <input autocomplete="off" type="email" required placeholder="Your email" class="subscribe__input">
+                     <button type="submit" class="subscribe__button">Subscribe</button>
+                  </form>
+               </div>
+            </div>
+         </section>
+         <section class="page_get-in-touch get-in-touch">
+            <div class="get-in-touch__container _container">
+               <div class="get-in-touch__header header__block">
+                  <h2 class="header__block__title">Practice Advice</h2>
+                  <div class="header__block__text">Problems trying to resolve the conflict between the two major realms
+                     of Classical physics: Newtonian mechanics</div>
+               </div>
+               <div class="get-in-touch__body">
+                  <div class="get-in-touch__item">
+                     <div class="get-in-touch__item__body">
+                        <div class="get-in-touch__item__icon">
+                           <svg display="none">
+                              <symbol width="72" height="72" viewBox="0 0 72 72" id="phone">
+                                 <g>
+                                    <path
+                                       d="M55.929 38.9947C55.5775 38.6426 55.16 38.3632 54.7004 38.1726C54.2408 37.982 53.7482 37.8839 53.2506 37.8839C52.7531 37.8839 52.2604 37.982 51.8008 38.1726C51.3413 38.3632 50.9238 38.6426 50.5722 38.9947L44.5335 45.0334C41.7339 44.1999 36.5097 42.3057 33.1987 38.9947C29.8876 35.6836 27.9934 30.4594 27.16 27.6598L33.1987 21.6211C33.5508 21.2696 33.8301 20.8521 34.0207 20.3925C34.2113 19.9329 34.3094 19.4403 34.3094 18.9427C34.3094 18.4452 34.2113 17.9525 34.0207 17.4929C33.8301 17.0333 33.5508 16.6159 33.1987 16.2643L18.0451 1.11076C17.6936 0.758646 17.2761 0.479298 16.8165 0.288701C16.3569 0.0981045 15.8642 0 15.3667 0C14.8692 0 14.3765 0.0981045 13.9169 0.288701C13.4573 0.479298 13.0398 0.758646 12.6883 1.11076L2.41418 11.3849C0.97459 12.8245 0.163873 14.802 0.19418 16.8212C0.281313 22.2159 1.70954 40.9533 16.4767 55.7204C31.2439 70.4876 49.9813 71.912 55.3797 72.003H55.4858C57.4861 72.003 59.3765 71.215 60.8085 69.783L71.0826 59.5088C71.4347 59.1573 71.7141 58.7398 71.9047 58.2802C72.0953 57.8207 72.1934 57.328 72.1934 56.8304C72.1934 56.3329 72.0953 55.8402 71.9047 55.3807C71.7141 54.9211 71.4347 54.5036 71.0826 54.1521L55.929 38.9947ZM55.4479 64.4224C50.72 64.3428 34.5435 63.0737 21.8335 50.3599C9.08175 37.6081 7.84674 21.3749 7.77097 16.7417L15.3667 9.14594L25.1635 18.9427L20.2651 23.8411C19.8198 24.2861 19.4924 24.835 19.3125 25.4382C19.1326 26.0414 19.1058 26.68 19.2346 27.2961C19.3256 27.7318 21.5494 38.0627 27.8381 44.3515C34.1268 50.6402 44.4578 52.864 44.8934 52.9549C45.5092 53.0874 46.1484 53.0627 46.7522 52.8833C47.356 52.7039 47.9049 52.3755 48.3485 51.9283L53.2506 47.0299L63.0474 56.8267L55.4479 64.4224Z"
+                                       fill="#0D5C63" />
+                                 </g>
+                              </symbol>
+                           </svg>
+                           <svg class="phone">
+                              <use xlink:href="#phone">
+
+                              </use>
+                           </svg>
+                        </div>
+                        <div class="get-in-touch__item__text">
+                           <p>georgia.young@example.com</p>
+                           <p>georgia.young@ple.com</p>
+                        </div>
+                        <div class="get-in-touch__item__title">Get Support</div>
+                        <button type="submit" class="get-in-touch__item__button">Submit Request</button>
+                     </div>
+                  </div>
+                  <div class="get-in-touch__item">
+                     <div class="get-in-touch__item__body">
+                        <div class="get-in-touch__item__icon">
+                           <svg display="none">
+                              <symbol width="56" height="72" viewBox="0 0 56 71" id="geo">
+                                 <g>
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                       d="M27.792 71C27.082 71 26.3897 70.7693 25.8119 70.3403C24.774 69.577 0.380786 51.2624 0.479793 28.3825C0.479793 12.7411 12.7327 0 27.792 0C42.8513 0 55.1042 12.7411 55.1042 28.4002C55.2032 51.2624 30.81 69.577 29.7721 70.3403C29.1943 70.7693 28.502 71 27.792 71ZM48.2761 28.418C48.2761 16.6532 39.089 7.10006 27.792 7.10006C16.495 7.10006 7.30784 16.6532 7.30784 28.4002C7.23615 44.1659 22.292 58.3163 27.792 62.9598C33.2954 58.3199 48.3478 44.173 48.2761 28.418ZM41.6872 28C41.6872 35.721 35.4549 42 27.7913 42C20.1278 42 13.8955 35.721 13.8955 28C13.8955 20.279 20.1278 14 27.7913 14C35.4549 14 41.6872 20.279 41.6872 28ZM34.7393 28C34.7393 24.1395 31.6231 21 27.7913 21C23.9596 21 20.8434 24.1395 20.8434 28C20.8434 31.8605 23.9596 35 27.7913 35C31.6231 35 34.7393 31.8605 34.7393 28Z"
+                                       fill="#0D5C63" />
+                                 </g>
+                              </symbol>
+                           </svg>
+                           <svg class="geo">
+                              <use xlink:href="#geo">
+
+                              </use>
+                           </svg>
+                        </div>
+                        <div class="get-in-touch__item__text">
+                           <p>georgia.young@example.com</p>
+                           <p>georgia.young@ple.com</p>
+                        </div>
+                        <div class="get-in-touch__item__title">Get Support</div>
+                        <button type="submit" class="get-in-touch__item__button">Submit Request</button>
+                     </div>
+                  </div>
+                  <div class="get-in-touch__item">
+                     <div class="get-in-touch__item__body">
+                        <div class="get-in-touch__item__icon">
+                           <svg display="none">
+                              <symbol width="73" height="72" viewBox="0 0 73 72" id="telegram">
+                                 <g clip-path="url(#clip0)">
+                                    <path
+                                       d="M70.3484 2.16199C69.9592 1.75903 69.4674 1.48003 68.9308 1.35781C68.3943 1.23558 67.8354 1.27521 67.3198 1.47202L3.8615 25.4708C3.31422 25.6867 2.84305 26.0706 2.51056 26.5716C2.17807 27.0726 2 27.6669 2 28.2756C2 28.8844 2.17807 29.4787 2.51056 29.9797C2.84305 30.4807 3.31422 30.8646 3.8615 31.0805L31.5524 42.5999L42.6287 71.3984C42.8368 71.9426 43.1935 72.4115 43.6549 72.7473C44.1162 73.0832 44.6619 73.2712 45.2248 73.2883C45.8077 73.2759 46.3733 73.08 46.847 72.7266C47.3207 72.3732 47.6804 71.8787 47.8785 71.3084L70.9542 5.31183C71.1507 4.78108 71.1981 4.20317 71.0909 3.64548C70.9836 3.08779 70.7261 2.5733 70.3484 2.16199ZM45.2248 61.8889L37.1771 40.89L50.9937 26.5207L46.9266 22.291L32.9946 36.7802L12.9187 28.2906L63.4834 9.30162L45.2248 61.8889Z"
+                                       fill="#0D5C63" />
+                                 </g>
+                              </symbol>
+                           </svg>
+                           <svg class="telegram">
+                              <use xlink:href="#telegram">
+
+                              </use>
+                           </svg>
+                        </div>
+                        <div class="get-in-touch__item__text">
+                           <p>georgia.young@example.com</p>
+                           <p>georgia.young@ple.com</p>
+                        </div>
+                        <div class="get-in-touch__item__title">Get Support</div>
+                        <button type="submit" class="get-in-touch__item__button">Submit Request</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <footer class="footer">
 
       </footer>
    </div>
+   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
    <script src="js/main.js"></script>
 </body>
