--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
          <section class="page_get-in-touch get-in-touch">
             <div class="get-in-touch__container _container">
                <div class="get-in-touch__header header__block">
-                  <h2 class="header__block__title">Practice Advice</h2>
+                  <h2 class="header__block__title">Get In Touch</h2>
                   <div class="header__block__text">Problems trying to resolve the conflict between the two major realms
                      of Classical physics: Newtonian mechanics</div>
                </div>
@@ -436,6 +436,17 @@
                         <button type="submit" class="get-in-touch__item__button">Submit Request</button>
                      </div>
                   </div>
+               </div>
+            </div>
+         </section>
+         <section class="page__contact contact">
+            <div class="contact__container _container">
+               <div class="contact__body">
+                  <div class="contact__content">
+                     <h4 class="contact__title">Consulting Agency For Your Business</h4>
+                     <div class="contact__text">the quick fox jumps over the lazy dog</div>
+                  </div>
+                  <a href="#" class="contact__button">Contact Us</a>
                </div>
             </div>
          </section>
