--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
 <body>
    <div class="wrapper">
-      <header class="header">
+      <header class="header" id="header">
          <div class="header__container _container">
             <a href="#" class="header__logo">Relvise</a>
             <nav class="header__menu">
                <ul class="header__menu__list">
                   <li class="header__menu__item">
-                     <a href="#" class="header__menu__link">Home</a>
+                     <a href="#header" class="header__menu__link">Home</a>
                   </li>
                   <li class="header__menu__item">
-                     <a href="#" class="header__menu__link">Product</a>
+                     <a href="#practice" class="header__menu__link">Product</a>
                   </li>
                   <li class="header__menu__item">
-                     <a href="#" class="header__menu__link">Item</a>
+                     <a href="#item" class="header__menu__link">Item</a>
                   </li>
                   <li class="header__menu__item">
-                     <a href="#" class="header__menu__link">Contant</a>
+                     <a href="#contact" class="header__menu__link">Contant</a>
                   </li>
                </ul>
             </nav>
@@ -178,7 +178,7 @@
 
             </div>
          </section>
-         <section class="page__practice practice">
+         <section class="page__practice practice" id="practice">
             <div class="practice__container _container">
                <div class="practice__header header__block">
                   <h2 class="header__block__title">Practice Advice</h2>
@@ -301,7 +301,7 @@
                </div>
             </div>
          </section>
-         <div class="page__clients clients">
+         <div class="page__clients clients" id="item">
             <div class="clients__container _container">
                <div class="clients__list">
                   <ul class="clients__items">
@@ -439,7 +439,7 @@
                </div>
             </div>
          </section>
-         <section class="page__contact contact">
+         <section class="page__contact contact" id="contact">
             <div class="contact__container _container">
                <div class="contact__body">
                   <div class="contact__content">
@@ -452,12 +452,128 @@
          </section>
       </main>
       <footer class="footer">
+         <div class="footer__top">
+            <div class="footer__main _container">
+               <div class="footer__row">
+                  <div data-spollers class="footer__column">
 
+                     <div tabindex="-1" data-spoller class="footer__title">Company Info</div>
+                     <div class="footer__menu">
+                        <ul class="footer__list">
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">About Us</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Carrier</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">We are hiring</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Blog</a>
+                           </li>
+                        </ul>
+
+                     </div>
+                  </div>
+                  <div class="footer__column" data-spollers="768,max">
+                     <div class="footer__title" tabindex="-1" data-spoller>Legal</div>
+                     <div class="footer__menu">
+                        <ul class="footer__list">
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">About Us</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Carrier</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">We are hiring</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Blog</a>
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="footer__column" data-spollers="768,max">
+                     <div class="footer__title" tabindex="-1" data-spoller>Features</div>
+                     <div class="footer__menu">
+                        <ul class="footer__list">
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Business Marketing</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">User Analytic</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Live Chat</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Unlimited Support</a>
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="footer__column" data-spollers="768,max">
+                     <div class="footer__title" tabindex="-1" data-spoller>Resources</div>
+                     <div class="footer__menu">
+                        <ul class="footer__list">
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">IOS & Android</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Watch a Demo</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">Customers</a>
+                           </li>
+                           <li class="footer__item">
+                              <a href="#" class="footer__link">API</a>
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="footer__column" data-spollers="768,max">
+                     <div class="footer__title" tabindex="-1" data-spoller>Get In Touch</div>
+                     <div class="footer__contacts">
+                        <a href="tel:4805550103" class="footer__contacts__item footer_phone">(480) 555-0103</a>
+                        <a href="#" class="footer__contacts__item footer_geo">4517 Washington Ave. Manchester, Kentucky
+                           39495</a>
+                        <a href="mailto:debra.holt@example.com"
+                           class="footer__contacts__item footer_email">debra.holt@example.com</a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="footer__bottom">
+            <div class="footer__container _container">
+               <div class="footer__copy">
+                  <p>Made With Love By Figmaland All Right Reserved</p>
+               </div>
+               <div class="footer__social">
+                  <a href="#" class="footer__social__item">
+                     <img src="image/footer_img/instagram.png" alt="instagram">
+                  </a>
+                  <a href="#" class="footer__social__item">
+                     <img src="image/footer_img/facebook.png" alt="facebook">
+                  </a>
+                  <a href="#" class="footer__social__item">
+                     <img src="image/footer_img/twitter.png" alt="twitter">
+                  </a>
+                  <a href="#" class="footer__social__item">
+                     <img src="image/footer_img/youtube.png" alt="youtube">
+                  </a>
+               </div>
+            </div>
+         </div>
       </footer>
    </div>
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+   <script src="js/accardeon.js"></script>
    <script src="js/main.js"></script>
+
 </body>
 
 </html>
